# NYSETAQBenchmarks

./: .gitignore  .gitmodules  README.md  generateDB.sh  index.html  pyproject.toml
.claude/skills/run-nyse-taq-benchmarks/: SKILL.md
artifacts/parameters/: genParameters.q
artifacts/parameters/full/: anInfreqInstr.txt  fiftyInstrs.txt  fivehundredInfreqInstrs.txt  hundredInstrs.txt  thousandInfreqInstrs.txt  twentyInstrs.txt
artifacts/parameters/large/: anInfreqInstr.txt  fiftyInstrs.txt  fivehundredInfreqInstrs.txt  hundredInstrs.txt  infreqInstr.txt  mostFreqInstr.txt  thousandInfreqInstrs.txt  twentyInstrs.txt
artifacts/parameters/medium/: aFreqInstr.txt  anInfreqInstr.txt  fiftyInstrs.txt  fivehundredInfreqInstrs.txt  freqInstr.txt  hundredInstrs.txt  infreqInstr.txt  mostFreqInstr.txt  thousandInfreqInstrs.txt  timeBuckets.txt  twentyInstrs.txt
artifacts/parameters/small/: anInfreqInstr.txt  fiftyInstrs.txt  fivehundredInfreqInstrs.txt  hundredInstrs.txt  (+2 more)
artifacts/queries/: reindex.sh
benchmarks/inmemory/: common.sh  kdbAttributes.sh  queryEngines.sh
pysrc/: convertToClickBenchFormat.py  convertToJSFormat.py
pysrc/queryrunner/: iostat.py  main.py
pysrc/taqToParquet/: main.py  schemas.py  table_converters.py
results/: mappings.yaml
src/: columnStat.q  compareOutput.q  compress.q  getQueryParameters.q  loadHiveDataset.q  pivot.q  resolve_device.sh  runQueries.q  taqToKDB.q  util.q
src/rayforce/: buildRayforceDB.rfl  exportRayCSV.q  genParams.sh  prelude.rfl  runQueries.rfl  runRayforce.sh  verifyRows.rfl  verifyRows.sh
test/: inmemory.sh
(+32 files in other folders)
